<resources>
    <string name="app_name">okMatka</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="close" translatable="false">Close</string>
    <string name="register">Register</string>"
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="register_app">register app</string>
    <string name="this_will_be_the_app_logo">this will be the app logo</string>

    <string name="login_app">Login App</string>
    <string name="did_you_sign_up">Did you sign up?</string>
    <string name="good_match">Good Match</string>
    <string name="bad_match">Bad Match</string>
    <string name="user_name">User Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="first_name">First Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a Message</string>
    <string name="this_will_be_the_rate">this will be the rate</string>
    <string name="this_will_be_the_name">this will be the name</string>
    <string name="this_will_be_the_age">this will be the age</string>
    <string name="this_will_be_roll">this will be roll</string>
    <string name="this_will_be_experience">this will be experience</string>
    <string name="this_will_be_favourite_beach">this will be favourite beach</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="tap_the_picture_to_change_it">Tap the picture to change it</string>
    <string name="last_name">Last Name</string>
    <string name="your_roll">Your Roll</string>
    <string name="experience">Experience</string>
    <string name="favourite_beach">Favourite Beach</string>
    <string name="age">Age</string>
    <string name="chat">chat</string>
    <string name="rate_your_friend">Rate Me</string>


</resources>