<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_app_background"
    tools:context=".Activity_Login">


    <TextView
        android:id="@+id/Login_LBL_Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/login_app"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/Login_IMG_appLogo"
        android:layout_width="109dp"
        android:layout_height="141dp"
        android:layout_below="@+id/Login_LBL_Head"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="-88dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/app_name"
        />

    <LinearLayout
        android:id="@+id/login_LAY_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/Login_IMG_appLogo"
        android:layout_marginTop="40dp"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorPrimaryDark"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_EDT_email"
                android:background="@color/whiteColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/colorPrimaryDark"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Login_EDT_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passowrd"
                android:background="@color/whiteColor"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Login_BTN_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            app:cornerRadius="7dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Login_LBL_Question"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_LAY_details"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/did_you_sign_up"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Login_BTN_signup"
        android:layout_width="164dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/Login_LBL_Question"
        android:layout_alignBottom="@+id/Login_LBL_Question"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="-11dp"
        android:text="@string/signUp"
        android:textSize="20sp" />


</RelativeLayout>